Added background process stuff
