# src/app/app.controller.ts
@@ -1,51 +1,4 @@
-import { IsPublic } from "@/common/decorators/auth.decorator";
-import { Controller, Get } from "@nestjs/common";
-import { ApiOperation } from "@nestjs/swagger";
+import { Controller } from "@nestjs/common";
 
 @Controller()
-export class AppController {
-    @IsPublic()
-    @Get()
-    @ApiOperation({ summary: "Test if Server is Running" })
-    getHome() {
-        return {
-            success: true,
-            message: "El Psy Congroo!",
-            server_name: "nestjs_starter_pack",
-            server_type: "WEB",
-        };
-    }
-
-    // @IsPublic()
-    // @Get("files/:filename")
-    // @ApiOperation({ summary: "Stream Files" })
-    // async streamFile(
-    //     @Param("filename") filename: string,
-    //     @Res() res: Response,
-    // ) {
-    //     if (filename.includes("..")) {
-    //         throw new NotFoundException("Invalid filename");
-    //     }
-
-    //     const filePath = path.join(process.cwd(), "uploads", filename);
-
-    //     let stat;
-    //     try {
-    //         stat = await fs.promises.stat(filePath);
-    //     } catch {
-    //         throw new NotFoundException("File not found");
-    //     }
-
-    //     const mimeType = mime.lookup(filePath) || "application/octet-stream";
-
-    //     res.setHeader("Content-Type", mimeType);
-    //     res.setHeader("Content-Length", stat.size);
-    //     res.setHeader("Content-Disposition", `inline; filename="${filename}"`);
-
-    //     const fileStream = fs.createReadStream(filePath);
-    //     fileStream.on("error", () =>
-    //         res.status(500).send("Error reading file"),
-    //     );
-    //     fileStream.pipe(res);
-    // }
-}
+export class AppController {}
