# swagger-spec.json
@@ -1,321 +1,1 @@
-{
-  "openapi": "3.0.0",
-  "paths": {
-    "/": {
-      "get": {
-        "operationId": "AppController_getHome",
-        "parameters": [],
-        "responses": {},
-        "summary": "Test if Server is Running",
-        "tags": [
-          "App"
-        ]
-      }
-    },
-    "/auth/register": {
-      "post": {
-        "operationId": "AuthController_register",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterUserDto"
-              }
-            }
-          }
-        },
-        "responses": {},
-        "summary": "Register User",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/login": {
-      "post": {
-        "operationId": "AuthController_signIn",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/LoginUserDto"
-              }
-            }
-          }
-        },
-        "responses": {},
-        "summary": "Login User",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/send-otp": {
-      "post": {
-        "operationId": "AuthController_resendOTP",
-        "parameters": [],
-        "responses": {},
-        "summary": "Resend OTP",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/verify-otp": {
-      "post": {
-        "operationId": "AuthController_verifyOTP",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/VerifyOtpDto"
-              }
-            }
-          }
-        },
-        "responses": {},
-        "summary": "Verify OTP",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/send-otp/password-reset": {
-      "post": {
-        "operationId": "AuthController_sendForgotPasswordOtp",
-        "parameters": [],
-        "responses": {},
-        "summary": "Send Forgot Password OTP",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/verify-otp/password-reset": {
-      "post": {
-        "operationId": "AuthController_verifyForgotPasswordOTP",
-        "parameters": [],
-        "responses": {},
-        "summary": "Verify Forgot Password OTP",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/change-password": {
-      "post": {
-        "operationId": "AuthController_changePassword",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ChangePasswordDto"
-              }
-            }
-          }
-        },
-        "responses": {},
-        "summary": "Change Password",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/forgot-password": {
-      "post": {
-        "operationId": "AuthController_forgotPassword",
-        "parameters": [],
-        "responses": {},
-        "summary": "Forgot Password",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/reset-password": {
-      "post": {
-        "operationId": "AuthController_resetPassword",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ResetPasswordDto"
-              }
-            }
-          }
-        },
-        "responses": {},
-        "summary": "Reset Password",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/auth/refresh-token": {
-      "post": {
-        "operationId": "AuthController_refreshToken",
-        "parameters": [],
-        "responses": {},
-        "summary": "Refresh Access Token",
-        "tags": [
-          "Auth"
-        ]
-      }
-    },
-    "/profile": {
-      "get": {
-        "operationId": "ProfileController_getProfile",
-        "parameters": [],
-        "responses": {},
-        "summary": "Get user profile",
-        "tags": [
-          "Profile"
-        ]
-      },
-      "patch": {
-        "operationId": "ProfileController_updateProfile",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateProfileDto"
-              }
-            }
-          }
-        },
-        "responses": {},
-        "summary": "Update user profile",
-        "tags": [
-          "Profile"
-        ]
-      }
-    }
-  },
-  "info": {
-    "title": "NestJS Starter Pac",
-    "description": "The API Description for NestJS Backend Starter Pack",
-    "version": "1.0",
-    "contact": {}
-  },
-  "tags": [],
-  "servers": [],
-  "components": {
-    "schemas": {
-      "RegisterUserDto": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string",
-            "format": "email"
-          },
-          "phone": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "name",
-          "email",
-          "phone",
-          "password"
-        ]
-      },
-      "LoginUserDto": {
-        "type": "object",
-        "properties": {
-          "email": {
-            "type": "string",
-            "format": "email"
-          },
-          "password": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "email",
-          "password"
-        ]
-      },
-      "VerifyOtpDto": {
-        "type": "object",
-        "properties": {
-          "otp": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string",
-            "format": "email"
-          }
-        },
-        "required": [
-          "otp",
-          "email"
-        ]
-      },
-      "ChangePasswordDto": {
-        "type": "object",
-        "properties": {
-          "oldPassword": {
-            "type": "string"
-          },
-          "newPassword": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "oldPassword",
-          "newPassword"
-        ]
-      },
-      "ResetPasswordDto": {
-        "type": "object",
-        "properties": {
-          "token": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "token",
-          "password"
-        ]
-      },
-      "UpdateProfileDto": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "phone": {
-            "type": "string"
-          },
-          "description": {
-            "type": "string"
-          },
-          "avatar": {
-            "type": "string"
-          }
-        }
-      }
-    }
-  }
-}
+{"openapi":"3.0.0","paths":{"/api/v1/test-bg":{"get":{"operationId":"AppController_testBg","parameters":[],"responses":{},"tags":["App"]}},"/api/v1/auth/register":{"post":{"operationId":"AuthController_register","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/RegisterUserDto"}}}},"responses":{},"summary":"Register User","tags":["Auth"]}},"/api/v1/auth/login":{"post":{"operationId":"AuthController_signIn","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/LoginUserDto"}}}},"responses":{},"summary":"Login User","tags":["Auth"]}},"/api/v1/auth/send-otp":{"post":{"operationId":"AuthController_resendOTP","parameters":[],"responses":{},"summary":"Resend OTP","tags":["Auth"]}},"/api/v1/auth/verify-otp":{"post":{"operationId":"AuthController_verifyOTP","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/VerifyOtpDto"}}}},"responses":{},"summary":"Verify OTP","tags":["Auth"]}},"/api/v1/auth/send-otp/password-reset":{"post":{"operationId":"AuthController_sendForgotPasswordOtp","parameters":[],"responses":{},"summary":"Send Forgot Password OTP","tags":["Auth"]}},"/api/v1/auth/verify-otp/password-reset":{"post":{"operationId":"AuthController_verifyForgotPasswordOTP","parameters":[],"responses":{},"summary":"Verify Forgot Password OTP","tags":["Auth"]}},"/api/v1/auth/change-password":{"post":{"operationId":"AuthController_changePassword","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/ChangePasswordDto"}}}},"responses":{},"summary":"Change Password","tags":["Auth"]}},"/api/v1/auth/forgot-password":{"post":{"operationId":"AuthController_forgotPassword","parameters":[],"responses":{},"summary":"Forgot Password","tags":["Auth"]}},"/api/v1/auth/reset-password":{"post":{"operationId":"AuthController_resetPassword","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/ResetPasswordDto"}}}},"responses":{},"summary":"Reset Password","tags":["Auth"]}},"/api/v1/auth/refresh-token":{"post":{"operationId":"AuthController_refreshToken","parameters":[],"responses":{},"summary":"Refresh Access Token","tags":["Auth"]}},"/api/v1/profile":{"get":{"operationId":"ProfileController_getProfile","parameters":[],"responses":{},"summary":"Get user profile","tags":["Profile"]},"patch":{"operationId":"ProfileController_updateProfile","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/UpdateProfileDto"}}}},"responses":{},"summary":"Update user profile","tags":["Profile"]}}},"info":{"title":"NestJS Starter Pack","description":"The API Description for NestJS Backend Starter Pack","version":"1.0","contact":{}},"tags":[],"servers":[],"components":{"schemas":{"RegisterUserDto":{"type":"object","properties":{"name":{"type":"string"},"email":{"type":"string","format":"email"},"phone":{"type":"string"},"password":{"type":"string"}},"required":["name","email","phone","password"]},"LoginUserDto":{"type":"object","properties":{"email":{"type":"string","format":"email"},"password":{"type":"string"}},"required":["email","password"]},"VerifyOtpDto":{"type":"object","properties":{"otp":{"type":"string"},"email":{"type":"string","format":"email"}},"required":["otp","email"]},"ChangePasswordDto":{"type":"object","properties":{"oldPassword":{"type":"string"},"newPassword":{"type":"string"}},"required":["oldPassword","newPassword"]},"ResetPasswordDto":{"type":"object","properties":{"token":{"type":"string"},"password":{"type":"string"}},"required":["token","password"]},"UpdateProfileDto":{"type":"object","properties":{"name":{"type":"string"},"phone":{"type":"string"},"description":{"type":"string"},"avatar":{"type":"string"}}}}}}
